# CodeMems

./: .gitignore  architecture.md  readme.md  schema.md
backend/: data_pipeline.py  main.py  validation.py
card_registry/: Cargo.toml  Dockerfile  main.py
card_registry/src/: main.rs
charts/card-registry/: Chart.yaml  values.yaml
charts/card-registry/templates/: NOTES.txt  _helpers.tpl  card-registry.yaml  deployment.yaml  service.yaml
charts/codemems/: Chart.yaml  requirements.yaml  values.yaml
charts/data-pipeline/: Chart.yaml  values.yaml
charts/data_pipeline/: Chart.yaml  values.yaml
charts/frontend/: values.yaml
charts/note-registry/: Chart.yaml  values.yaml
charts/notes-registry/: Chart.yaml  values.yaml
charts/repo/: card-registry-0.1.0.tgz  codemems-0.1.0.tgz  data-pipeline-0.1.0.tgz  data_pipeline-0.1.0.tgz  frontend-0.1.0.tgz  index.yaml  note-registry-0.1.0.tgz  scheduler-0.1.0.tgz
charts/scheduler/: Chart.yaml  values.yaml
config/: ingress.yaml
data_pipeline/: Dockerfile  main.py
frontend/: package-lock.json  package.json
frontend/placeholder/: decks.json
frontend/src/: App.vue  main.js  store.js
frontend/src/components/: Card.vue  (+8 more)
note_registry/: Dockerfile  deployment.yaml  main.py
notes_api/: Dockerfile  deployment.yaml  main.py  validation.py
notetaker/: card_ops.py  main.py
scheduler/: Dockerfile  deployment.yaml  main.py  scheduler.py
utils/: Readme.md  clean_minikube.sh  docker_build_all.sh  package_all_charts.sh  package_chart.sh  run_local_ml.sh  run_local_notes.sh  setup_helm_local.sh  start_in_minikube.sh
(+38 files in other folders)
