[package]
name = "card_registry"
version = "0.1.0"
authors = ["Sladuca <sladuca777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.1"
futures = "0.1"
failure = "0.1.5"
redis = "0.10.0"
lapin-futures = "0.26.6"
